added submit button

--- a/project/templates/project/index.html
+++ b/project/templates/project/index.html
@@ -52,6 +52,8 @@
 
         	<input type="text" class="mb-2 input-box"  name="SentCalculation" placeholder="{{Sentexpression}}"/>
 
+          <button type="submit" class="submit-button">Submit</button>
+
 			<div class="output">{{answer}}</div>
 		  	
 
