--- a/project/static/project/index.css
+++ b/project/static/project/index.css
@@ -70,3 +70,12 @@
     -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
 }
 
+.submit-button{
+
+  border-radius: 20px;
+  background-color: #bd94ff;
+  box-shadow: 
+    12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+}
+
