--- a/project/static/project/index.css
+++ b/project/static/project/index.css
@@ -137,6 +137,7 @@
     padding: 20px 20px;
     background-color: #443361;
     color: aliceblue;
+    overflow: auto;
     box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
       -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
   }
